integration test for native go services